--- a/.dockerignore
+++ b/.dockerignore
@@ -2,6 +2,9 @@
 .vscode
 /node_modules
 
+
+
+
 # code formatter
 .eslintrc
 .eslintignore
@@ -16,3 +19,8 @@ jest.config.js
 # docker
 Dockerfile
 docker-compose.yml
+
+/kubernetes
+
+.gitignore
+
