--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,21 +22,30 @@ services:
     ports:
       - '80:80'
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./servers/raffle-server/nginx.conf:/etc/nginx/nginx.conf
     restart: 'unless-stopped'
     networks:
       - backend
   server:
     build:
-      context: ./
+      context: .
       target: development-build-stage
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.server
     container_name: server
+    environment:
+      DB_HOST: pg
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: password
+      DB_DATABASE: postgres
+      POSTGRES_DATABASE: postgres
+      SECRET_KEY: secret
+
     ports:
       - '3005:3005'
     volumes:
-      - ./:/app
-      - /app/node_modules
+      - ./servers/raffle-server:/app/servers/raffle-server
+      - /app/servers/raffle-server/node_modules
     restart: 'unless-stopped'
     networks:
       - backend
