--- a/servers/raffle-server/package.json
+++ b/servers/raffle-server/package.json
@@ -5,15 +5,15 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "npm run build && cross-env NODE_ENV=production node dist/server.js",
+    "start": "pnpm run build && cross-env NODE_ENV=production node dist/server.js",
     "dev:standalone": "cross-env NODE_ENV=development nodemon -L",
     "dev": "docker compose up",
     "build": "swc src -d dist --source-maps --copy-files",
     "build:tsc": "tsc && tsc-alias",
     "test": "jest --forceExit --detectOpenHandles",
-    "lint": "eslint --ignore-path .gitignore --ext .ts src/",
-    "lint:fix": "npm run lint -- --fix",
-    "deploy:prod": "npm run build && pm2 start ecosystem.config.js --only prod",
+    "lint": "eslint --ext .ts src/",
+    "lint:fix": "pnpm run lint --fix",
+    "deploy:prod": "pnpm run build && pm2 start ecosystem.config.js --only prod",
     "deploy:dev": "pm2 start ecosystem.config.js --only dev"
   },
   "dependencies": {
