--- a/turbo.json
+++ b/turbo.json
@@ -11,5 +11,19 @@
     "dev": {
       "cache": false
     }
-  }
+  },
+  "globalDependencies": [
+    "$NODE_ENV",
+    "$CREDENTIALS",
+    "$ORIGIN",
+    "$PORT",
+    "$DB_HOST",
+    "$DB_PORT",
+    "$DB_USER",
+    "$DB_PASSWORD",
+    "$DB_DATABASE",
+    "$SECRET_KEY",
+    "$LOG_FORMAT",
+    "$LOG_DIR"
+  ]
 }
