--- a/turbo.json
+++ b/turbo.json
@@ -12,18 +12,18 @@
       "cache": false
     }
   },
-  "globalDependencies": [
-    "$NODE_ENV",
-    "$CREDENTIALS",
-    "$ORIGIN",
-    "$PORT",
-    "$DB_HOST",
-    "$DB_PORT",
-    "$DB_USER",
-    "$DB_PASSWORD",
-    "$DB_DATABASE",
-    "$SECRET_KEY",
-    "$LOG_FORMAT",
-    "$LOG_DIR"
+  "globalEnv": [
+    "NODE_ENV",
+    "CREDENTIALS",
+    "ORIGIN",
+    "PORT",
+    "DB_HOST",
+    "DB_PORT",
+    "DB_USER",
+    "DB_PASSWORD",
+    "DB_DATABASE",
+    "SECRET_KEY",
+    "LOG_FORMAT",
+    "LOG_DIR"
   ]
 }
